feat: UI for seller